syntax = "proto3";

import "google/protobuf/empty.proto";
package ideas;
option go_package = "idea-store.ideas.v1;ideasv1";

// Ideas is service for managing ideas.
service Ideas {
  // Create new idea
  rpc CreateIdea (CreateRequest) returns (CreateResponse);
  // Get returns the idea by its id in JSON format.
  rpc GetIdea (GetRequest) returns (GetResponse);
  // Delete removes the idea from database by its id
  rpc DeleteIdea (DeleteRequest) returns (google.protobuf.Empty) {}
  //GetAllIdeas retrurs all ideas deom database
  rpc GetAllIdeas(google.protobuf.Empty) returns (GetAllResponse);
  //ToggleSaveIdea saves the idea to the board if not saved and removes it otherwise
  rpc ToggleSaveIdea(ToggleSaveRequest) returns (ToggleSaveResponse);

}

message CreateRequest {
  string name = 1;
  string description = 2;
  string link = 3;
  string tags = 4;
  string image = 5;
  int64 user_id = 6;
}

message CreateResponse {
  int64 idea_id = 1; // ID of the created idea.
}

message GetRequest{
    int64 idea_id = 1;
}
message GetResponse{
  string name = 1;
  string description = 2;
  string link = 3;
  string tags = 4;
  string image = 5;
  int64 user_id = 6;
  int32 likes=7;
}

message DeleteRequest{
    int64 idea_id = 1;
}

message IdeaData {
  int64 idea_id = 1;
  string name = 2;
  string description = 3;
  string link = 4;
  string tags = 5;
  string image = 6;
}

message GetAllResponse{
  repeated IdeaData ideas =1;
} 

message ToggleSaveRequest{
  int64 idea_id = 1;
  int64 board_id = 2;
}
message ToggleSaveResponse{
  bool now_saved = 1;
}